--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="HTML,CSS,P5js,JavaScript,fdtd,finite difference">
     <meta name="author" content="Matthew Hamilton">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FDPlate</title>
+    <title>Digital Wave Guide mesh</title>
     <!-- SCRIPT -->
     <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" async></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
@@ -26,7 +26,7 @@
       <a class="navbar-brand" href="#">FDPlate</a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/mhamilt/processing-tone-matrix">GitHub</a>
+          <a class="nav-link" href="https://github.com/chadmckell/DWGMesh">GitHub</a>
         </li>
       </ul>
     </nav>
