--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <body>
     <nav class="navbar navbar-dark navbar-full bg-inverse" style="">
-      <a class="navbar-brand" href="#">FDPlate</a>
+      <a class="navbar-brand" href="#">DWGMesh</a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/chadmckell/DWGMesh">GitHub</a>
